fix why-bg after overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@
 body{
   font-family: 'Raleway', sans-serif;
   width: 100%;
-  height: 6944px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   opacity: 1;
   overflow-x: hidden;
@@ -152,6 +151,7 @@ header{
     justify-content: space-between;
     height: 70px;
     padding: 5px 2%;
+    width: 100%;
   }
 
   .sticky {
@@ -367,6 +367,7 @@ header{
 .why-bg{
   margin: 150px auto;
   position: relative;
+  width: 100%;
 }
 
 .why-bg::before{
@@ -447,7 +448,8 @@ header{
 
 .video-play{
   position: absolute;
-  margin: auto;
+  top: 40%;
+  left: 40%;
 }
 
 /* Responsive Breakpoint */
@@ -472,6 +474,15 @@ header{
 @media (max-width: 1024px){
   .why-bg{
     margin: 0;
+  }
+
+  .why-bg::before{
+    width: 100%;
+  }
+
+  .why-bg::after{
+    width: 100%;
+    right: 0;
   }
 
   .why-bg .title{
@@ -1016,7 +1027,7 @@ header{
 /* Responsive Breakpoint */
 @media (max-width: 1024px){
   .footer{
-    margin-top: 150px;
+    margin-top: 130px;
   }
   .footer .container-flex{
     flex-direction: column;
